@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -18,15 +18,12 @@ import java.time.Instant;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
-
-import javax.measure.quantity.Dimensionless;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
@@ -69,11 +66,11 @@ import com.google.gson.Gson;
  * sent to one of the channels.
  *
  * @author Markus Pfleger - Initial contribution
- * @author Marcin Czeczko - Added support for planner & calendar data
+ * @author Marcin Czeczko - Added support for planner and calendar data
  */
 @NonNullByDefault
 public class AutomowerHandler extends BaseThingHandler {
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Collections.singleton(THING_TYPE_AUTOMOWER);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_AUTOMOWER);
     private static final String NO_ID = "NO_ID";
     private static final long DEFAULT_COMMAND_DURATION_MIN = 60;
     private static final long DEFAULT_POLLING_INTERVAL_S = TimeUnit.MINUTES.toSeconds(10);
@@ -81,7 +78,7 @@ public class AutomowerHandler extends BaseThingHandler {
     private final Logger logger = LoggerFactory.getLogger(AutomowerHandler.class);
     private final TimeZoneProvider timeZoneProvider;
 
-    private AtomicReference<String> automowerId = new AtomicReference<String>(NO_ID);
+    private AtomicReference<String> automowerId = new AtomicReference<>(NO_ID);
     private long lastQueryTimeMs = 0L;
 
     private @Nullable ScheduledFuture<?> automowerPollingJob;
@@ -120,8 +117,8 @@ public class AutomowerHandler extends BaseThingHandler {
     }
 
     private Optional<Integer> getCommandValue(Type type) {
-        if (type instanceof DecimalType) {
-            return Optional.of(((DecimalType) type).intValue());
+        if (type instanceof DecimalType command) {
+            return Optional.of(command.intValue());
         }
         return Optional.empty();
     }
@@ -132,7 +129,7 @@ public class AutomowerHandler extends BaseThingHandler {
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(AutomowerActions.class);
+        return Set.of(AutomowerActions.class);
     }
 
     @Override
@@ -163,8 +160,7 @@ public class AutomowerHandler extends BaseThingHandler {
         Bridge bridge = getBridge();
         if (bridge != null) {
             ThingHandler handler = bridge.getHandler();
-            if (handler instanceof AutomowerBridgeHandler) {
-                AutomowerBridgeHandler bridgeHandler = (AutomowerBridgeHandler) handler;
+            if (handler instanceof AutomowerBridgeHandler bridgeHandler) {
                 return bridgeHandler.getAutomowerBridge();
             }
         }
@@ -292,8 +288,8 @@ public class AutomowerHandler extends BaseThingHandler {
 
             updateState(CHANNEL_STATUS_LAST_UPDATE,
                     new DateTimeType(toZonedDateTime(mower.getAttributes().getMetadata().getStatusTimestamp())));
-            updateState(CHANNEL_STATUS_BATTERY, new QuantityType<Dimensionless>(
-                    mower.getAttributes().getBattery().getBatteryPercent(), Units.PERCENT));
+            updateState(CHANNEL_STATUS_BATTERY,
+                    new QuantityType<>(mower.getAttributes().getBattery().getBatteryPercent(), Units.PERCENT));
 
             updateState(CHANNEL_STATUS_ERROR_CODE, new DecimalType(mower.getAttributes().getMower().getErrorCode()));
 
