@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,8 +14,7 @@ package org.openhab.binding.bticinosmarther.internal.discovery;
 
 import static org.openhab.binding.bticinosmarther.internal.SmartherBindingConstants.*;
 
-import java.util.Collections;
-import java.util.Date;
+import java.time.Instant;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
@@ -25,14 +24,14 @@ import org.eclipse.jdt.annotation.Nullable;
 import org.openhab.binding.bticinosmarther.internal.account.SmartherAccountHandler;
 import org.openhab.binding.bticinosmarther.internal.api.dto.Location;
 import org.openhab.binding.bticinosmarther.internal.api.dto.Module;
-import org.openhab.core.config.discovery.AbstractDiscoveryService;
+import org.openhab.core.config.discovery.AbstractThingHandlerDiscoveryService;
 import org.openhab.core.config.discovery.DiscoveryResult;
 import org.openhab.core.config.discovery.DiscoveryResultBuilder;
 import org.openhab.core.config.discovery.DiscoveryService;
 import org.openhab.core.thing.ThingTypeUID;
 import org.openhab.core.thing.ThingUID;
-import org.openhab.core.thing.binding.ThingHandler;
-import org.openhab.core.thing.binding.ThingHandlerService;
+import org.osgi.service.component.annotations.Component;
+import org.osgi.service.component.annotations.ServiceScope;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -42,12 +41,12 @@ import org.slf4j.LoggerFactory;
  *
  * @author Fabio Possieri - Initial contribution
  */
+@Component(scope = ServiceScope.PROTOTYPE, service = SmartherModuleDiscoveryService.class)
 @NonNullByDefault
-public class SmartherModuleDiscoveryService extends AbstractDiscoveryService
-        implements DiscoveryService, ThingHandlerService {
+public class SmartherModuleDiscoveryService extends AbstractThingHandlerDiscoveryService<SmartherAccountHandler> {
 
     // Only modules can be discovered. A bridge must be manually added.
-    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_MODULE);
+    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_MODULE);
 
     private static final int DISCOVERY_TIME_SECONDS = 30;
 
@@ -55,14 +54,13 @@ public class SmartherModuleDiscoveryService extends AbstractDiscoveryService
 
     private final Logger logger = LoggerFactory.getLogger(SmartherModuleDiscoveryService.class);
 
-    private @Nullable SmartherAccountHandler bridgeHandler;
     private @Nullable ThingUID bridgeUID;
 
     /**
      * Constructs a {@code SmartherModuleDiscoveryService}.
      */
     public SmartherModuleDiscoveryService() {
-        super(SUPPORTED_THING_TYPES_UIDS, DISCOVERY_TIME_SECONDS);
+        super(SmartherAccountHandler.class, SUPPORTED_THING_TYPES_UIDS, DISCOVERY_TIME_SECONDS);
     }
 
     @Override
@@ -72,30 +70,23 @@ public class SmartherModuleDiscoveryService extends AbstractDiscoveryService
 
     @Override
     public void activate() {
-        logger.debug("Bridge[{}] Activating chronothermostat discovery service", this.bridgeUID);
         Map<String, Object> properties = new HashMap<>();
         properties.put(DiscoveryService.CONFIG_PROPERTY_BACKGROUND_DISCOVERY, Boolean.TRUE);
         super.activate(properties);
     }
 
     @Override
-    public void deactivate() {
+    public void initialize() {
+        logger.debug("Bridge[{}] Activating chronothermostat discovery service", this.bridgeUID);
+        this.bridgeUID = thingHandler.getThing().getUID();
+        super.initialize();
+    }
+
+    @Override
+    public void dispose() {
+        super.dispose();
         logger.debug("Bridge[{}] Deactivating chronothermostat discovery service", this.bridgeUID);
-        removeOlderResults(new Date().getTime());
-    }
-
-    @Override
-    public void setThingHandler(@Nullable ThingHandler handler) {
-        if (handler instanceof SmartherAccountHandler) {
-            final SmartherAccountHandler localBridgeHandler = (SmartherAccountHandler) handler;
-            this.bridgeHandler = localBridgeHandler;
-            this.bridgeUID = localBridgeHandler.getUID();
-        }
-    }
-
-    @Override
-    public @Nullable ThingHandler getThingHandler() {
-        return this.bridgeHandler;
+        removeOlderResults(Instant.now().toEpochMilli());
     }
 
     @Override
@@ -125,13 +116,10 @@ public class SmartherModuleDiscoveryService extends AbstractDiscoveryService
      * Discovers Chronothermostat devices for the given bridge handler.
      */
     private synchronized void discoverChronothermostats() {
-        final SmartherAccountHandler localBridgeHandler = this.bridgeHandler;
-        if (localBridgeHandler != null) {
-            // If the bridge is not online no other thing devices can be found, so no reason to scan at this moment
-            if (localBridgeHandler.isOnline()) {
-                localBridgeHandler.getLocations()
-                        .forEach(l -> localBridgeHandler.getLocationModules(l).forEach(m -> addDiscoveredDevice(l, m)));
-            }
+        // If the bridge is not online no other thing devices can be found, so no reason to scan at this moment
+        if (thingHandler.isOnline()) {
+            thingHandler.getLocations()
+                    .forEach(l -> thingHandler.getLocationModules(l).forEach(m -> addDiscoveredDevice(l, m)));
         }
     }
 
