@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -13,7 +13,7 @@
 package org.openhab.binding.caddx.internal.handler;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.openhab.binding.caddx.internal.CaddxBindingConstants;
@@ -68,7 +68,7 @@ public class ThingHandlerPartition extends CaddxBaseThingHandler {
         if (CaddxBindingConstants.PARTITION_SECONDARY_COMMAND.equals(channelUID.getId())) {
             updateState(channelUID, new DecimalType(data));
         } else {
-            OnOffType onOffType = ("true".equals(data)) ? OnOffType.ON : OnOffType.OFF;
+            OnOffType onOffType = OnOffType.from("true".equals(data));
             updateState(channelUID, onOffType);
         }
     }
@@ -135,7 +135,7 @@ public class ThingHandlerPartition extends CaddxBaseThingHandler {
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(CaddxPartitionActions.class);
+        return Set.of(CaddxPartitionActions.class);
     }
 
     private void sendPrimaryCommand(String pin, String function) {
