@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -24,9 +24,9 @@ import java.net.SocketException;
 import java.time.ZoneOffset;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 
@@ -83,7 +83,7 @@ public class FineOffsetGatewayDiscoveryService extends AbstractDiscoveryService 
     @Activate
     public FineOffsetGatewayDiscoveryService(@Reference TranslationProvider translationProvider,
             @Reference LocaleProvider localeProvider) throws IllegalArgumentException {
-        super(Collections.singleton(THING_TYPE_GATEWAY), DISCOVERY_TIME, true);
+        super(Set.of(THING_TYPE_GATEWAY), DISCOVERY_TIME, true);
         this.translationProvider = translationProvider;
         this.localeProvider = localeProvider;
         this.bundle = FrameworkUtil.getBundle(FineOffsetGatewayDiscoveryService.class);
