@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -13,6 +13,7 @@
 package org.openhab.binding.mqtt.homie.internal.homie300;
 
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.CompletableFuture;
@@ -22,6 +23,7 @@ import java.util.stream.Stream;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
+import org.openhab.binding.mqtt.generic.MqttChannelTypeProvider;
 import org.openhab.binding.mqtt.generic.mapping.AbstractMqttAttributeClass;
 import org.openhab.binding.mqtt.generic.tools.ChildMap;
 import org.openhab.binding.mqtt.homie.generic.internal.MqttBindingConstants;
@@ -29,7 +31,7 @@ import org.openhab.core.io.transport.mqtt.MqttBrokerConnection;
 import org.openhab.core.thing.ChannelGroupUID;
 import org.openhab.core.thing.ThingUID;
 import org.openhab.core.thing.type.ChannelDefinition;
-import org.openhab.core.thing.type.ChannelDefinitionBuilder;
+import org.openhab.core.thing.type.ChannelGroupDefinition;
 import org.openhab.core.thing.type.ChannelGroupType;
 import org.openhab.core.thing.type.ChannelGroupTypeBuilder;
 import org.openhab.core.thing.type.ChannelGroupTypeUID;
@@ -55,7 +57,6 @@ public class Node implements AbstractMqttAttributeClass.AttributeChanged {
     // Runtime
     public final DeviceCallback callback;
     protected final ChannelGroupUID channelGroupUID;
-    public final ChannelGroupTypeUID channelGroupTypeUID;
     private final String topic;
     private boolean initialized = false;
 
@@ -72,15 +73,14 @@ public class Node implements AbstractMqttAttributeClass.AttributeChanged {
         this.topic = topic + "/" + nodeID;
         this.nodeID = nodeID;
         this.callback = callback;
-        channelGroupTypeUID = new ChannelGroupTypeUID(MqttBindingConstants.BINDING_ID, UIDUtils.encode(this.topic));
         channelGroupUID = new ChannelGroupUID(thingUID, UIDUtils.encode(nodeID));
         properties = new ChildMap<>();
     }
 
     /**
      * Parse node properties. This will not subscribe to properties though. Call
-     * {@link Device#startChannels(MqttBrokerConnection)} as soon as the returned future has
-     * completed.
+     * {@link Device#startChannels(MqttBrokerConnection, ScheduledExecutorService, int, HomieThingHandler)}
+     * as soon as the returned future has completed.
      */
     public CompletableFuture<@Nullable Void> subscribe(MqttBrokerConnection connection,
             ScheduledExecutorService scheduler, int timeout) {
@@ -101,12 +101,12 @@ public class Node implements AbstractMqttAttributeClass.AttributeChanged {
 
     public void nodeRestoredFromConfig() {
         initialized = true;
+        attributes.name = nodeID;
     }
 
     /**
      * Unsubscribe from node attribute and also all property attributes and the property value
      *
-     * @param connection A broker connection
      * @return Returns a future that completes as soon as all unsubscriptions have been performed.
      */
     public CompletableFuture<@Nullable Void> stop() {
@@ -117,12 +117,16 @@ public class Node implements AbstractMqttAttributeClass.AttributeChanged {
     /**
      * Return the channel group type for this Node.
      */
-    public ChannelGroupType type() {
-        final List<ChannelDefinition> channelDefinitions = properties.stream()
-                .map(c -> new ChannelDefinitionBuilder(c.propertyID, c.channelTypeUID).build())
-                .collect(Collectors.toList());
-        return ChannelGroupTypeBuilder.instance(channelGroupTypeUID, attributes.name)
+    public ChannelGroupType type(String prefix, MqttChannelTypeProvider channelTypeProvider) {
+        final List<ChannelDefinition> channelDefinitions = properties.stream(propertyOrder(prefix, channelTypeProvider))
+                .map(p -> Objects.requireNonNull(p.getChannelDefinition())).toList();
+        return ChannelGroupTypeBuilder.instance(getChannelGroupTypeUID(prefix), attributes.name)
                 .withChannelDefinitions(channelDefinitions).build();
+    }
+
+    public ChannelGroupDefinition getChannelGroupDefinition(String prefix) {
+        return new ChannelGroupDefinition(channelGroupUID.getId(), getChannelGroupTypeUID(prefix), attributes.name,
+                null);
     }
 
     /**
@@ -156,7 +160,7 @@ public class Node implements AbstractMqttAttributeClass.AttributeChanged {
     /**
      * <p>
      * The properties of a node are determined by the node attribute "$properties". If that attribute changes,
-     * {@link #attributeChanged(CompletableFuture, String, Object, MqttBrokerConnection, ScheduledExecutorService)} is
+     * {@link #attributeChanged(String, Object, MqttBrokerConnection, ScheduledExecutorServic, boolean)} is
      * called. The {@link #properties} map will be synchronized and this method will be called for every removed
      * property.
      * </p>
@@ -216,5 +220,22 @@ public class Node implements AbstractMqttAttributeClass.AttributeChanged {
                 .collect(Collectors.toList()).forEach(topics::addAll);
 
         return topics;
+    }
+
+    public Collection<String> propertyOrder(String prefix, MqttChannelTypeProvider channelTypeProvider) {
+        String[] properties = attributes.properties;
+        if (properties != null) {
+            return Stream.of(properties).toList();
+        }
+        ChannelGroupType channelGroupType = channelTypeProvider.getChannelGroupType(getChannelGroupTypeUID(prefix),
+                null);
+        if (channelGroupType != null) {
+            return channelGroupType.getChannelDefinitions().stream().map(ChannelDefinition::getId).toList();
+        }
+        return this.properties.keySet();
+    }
+
+    private ChannelGroupTypeUID getChannelGroupTypeUID(String prefix) {
+        return new ChannelGroupTypeUID(MqttBindingConstants.BINDING_ID, prefix + "_" + UIDUtils.encode(this.topic));
     }
 }
