@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,7 +16,6 @@ import static org.openhab.binding.openwebnet.internal.OpenWebNetBindingConstants
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Optional;
 import java.util.Scanner;
 import java.util.Set;
@@ -162,15 +161,15 @@ public class OpenWebNetScenarioHandler extends OpenWebNetThingHandler {
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(OpenWebNetCENActions.class);
+        return Set.of(OpenWebNetCENActions.class);
     }
 
     @Override
-    protected String ownIdPrefix() {
+    protected Who getManagedWho() {
         if (isCENPlus || isDryContactIR) {
-            return Who.CEN_PLUS_SCENARIO_SCHEDULER.value().toString();
+            return Who.CEN_PLUS_SCENARIO_SCHEDULER;
         } else {
-            return Who.CEN_SCENARIO_SCHEDULER.value().toString();
+            return Who.CEN_SCENARIO_SCHEDULER;
         }
     }
 
@@ -343,7 +342,7 @@ public class OpenWebNetScenarioHandler extends OpenWebNetThingHandler {
     }
 
     private static Set<Integer> csvStringToSetInt(String s) {
-        TreeSet<Integer> intSet = new TreeSet<Integer>();
+        TreeSet<Integer> intSet = new TreeSet<>();
         String sNorm = s.replaceAll("\\s", "");
         Scanner sc = new Scanner(sNorm);
         sc.useDelimiter(",");
@@ -381,7 +380,7 @@ public class OpenWebNetScenarioHandler extends OpenWebNetThingHandler {
     @Override
     protected long getRefreshAllLastTS() {
         return lastAllDevicesRefreshTS;
-    };
+    }
 
     @Override
     protected void refreshDevice(boolean refreshAll) {
